<resources>
    <string name="app_name">GroceryApp</string>
    <string name="splash_screen"> SPLASH SCREEN TO GAGO</string>
    <!-- Log In Page!-->
    <string name="log_in"> Log In</string>
    <string name="create_account"> Create Account </string>
    <string name="line"> | </string>
    <string name="forgot_password"> Forgot Password </string>
    <!-- STRING USER IN LOGIN AND SIGN UP!-->
    <string name="username"> Username </string>
    <string name="email_address"> E-mail </string>
    <string name="password"> Password </string>
    <!-- Sign Up Page!-->
    <string name="sign_up"> Sign Up </string>
    <!-- Email Verification !-->
    <string name="email_verification"> Email Verification </string>
    <string name="enter_otp"> Enter your OTP code sent to your email! </string>
    <string name="resend_otp"> Resend OTP? </string>
    <string name="verify"> Verify </string>
    <!-- PICTURE NAME???!-->
    <string name="usernamepicture"> Username Picture </string>
    <string name="emailpicture"> Email Picture </string>
    <string name="passwordpicture"> Password Picture </string>
    <string name="title_activity_email_verification">EmailVerification</string>
    <!--VERIF CODE!-->
    <string name="symbol"> ● </string>

    <!-- Edit MY Account!-->
    <string name="save_button"> Save Button Picture</string>
    <string name="profile_picture"> Profile Picture</string>
    <string name="delivery_address">  Delivery Address </string>
    <string name="add"> + Add </string>
    <string name="personal_details"> Personal Details </string>
    <string name="full_name">  Full Name </string>
    <string name="email_address_settings_test"> ashley.yulo@gmail.com </string>
    <string name="phone_number"> Phone Number </string>
    <string name="change_password"> Change Password </string>
    <string name="philippine_number_code"> +63 </string>
    <string name="empty"> </string>


    <string name="whiteShape"> White Shape Rounded bottom left and right</string>
    <string name="address"> Address</string>


    <!-- BOTTOM BAR CLICKABLE IMAGE STRING!-->
    <string name="food"> Food Icon</string>
    <string name="recipe"> Recipe Icon</string>
    <string name="cart"> Cart Icon</string>

    <!-- SETTINGS PAGE -->
    <string name="current_orders"> Current Orders</string>
    <string name="past_orders"> Past Orders</string>
    <string name="edit_account"> Edit My Account</string>
    <string name="my_payment"> My Payment</string>
    <string name="favorites"> Favorites </string>
    <string name="faqs"> Faqs </string>
    <string name="terms_and_conditions"> Terms And Conditions</string>


    <!-- VERIFY PASSWORD PAGE !-->
    <string name="verify_password">  Verify Password </string>
    <string name="verify_password_subtext"> Keep your account safe, please verify your </string>
    <string name="verify_password_subtext2"> identity by entering your password.</string>
    <string name="back"> Go Back Arrow Icon</string>
    <string name="current_password"> Current Password</string>
    <string name="continue_password"> Continue </string>
    <string name="forgot_password_settings"> <u> Forgot Password?</u> </string>
    <string name="reset_password"> Reset Password</string>
    <string name="new_password"> New Password</string>
    <string name="confirm_password"> Confirm Password</string>


    <!-- RESET PASSWORD !-->

    <string name="select_channel"> Select the channel you wish to reset your </string>
    <string name="select_channel2"> password: </string>


    <!-- LANDING PAGE !-->
    <string name="search"> Search...</string>
    <string name="searchIcon"> Search Icon</string>
    <string name="meat_icon"> Meat Icon</string>
    <string name="fish_icon"> Fish Icon</string>
    <string name="vegetable_icon">  Vegetables Icon</string>
    <string name="fruit_icon">  Fruits Icon</string>
    <string name="jar_icon">  Jar Icon</string>
    <string name="image_preview"> Image Preview</string>
    <string name="image_background"> Background Shape</string>
    <string name="price_item"> ₱500</string>
    <string name="item_description">  Item Description</string>
    <string name="item_name">  Item Name</string>


    <!-- ITEM/PRODUCT CLICKED !-->
    <string name="add_to_cart">  Add To Cart</string>
    <string name="number_one">  1 </string>
    <string name="description_chosen_item">  Item description ulet yata </string>
    <string name="add_quantity_icon"> Add Quantity Icon</string>
    <string name="reduce_quantity_icon"> Reduce Quantity Icon</string>

    <!-- RECIPE PAGE !-->
    <string name="easy_way_text"> An [easy] way to try</string>
    <string name="new_dishes_text">  New Dishes!</string>
    <string name="food_name">  Food Name</string>
    <string name="click_for_info">  <u> click for more info </u></string>
    <string name="plus_sign_icon">  <u> Plus Sign </u></string>

    <!-- RECIPE PAGE ICONS-->
    <string name="all"> All Icon</string>
    <string name="fried">  Fried Icon</string>
    <string name="grilled">Grilled Icon</string>
    <string name="soup">  Soup Icon</string>
    <string name="yellow_container">  Yellow Container Shape</string>
    <string name="noodles">  Noodles Icon</string>

    <string name="linebar"> ____________________________________________________________  </string>
</resources>