<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow"
    tools:context=".LandingPage">

    <TextView
        android:id="@+id/white_background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:background="@drawable/whitebackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/settingsButton"
        android:layout_width="49dp"
        android:layout_height="45dp"
        android:layout_marginEnd="300dp"
        android:onClick="goToSettings"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/usernamepicture"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/user" />

    <ImageView
        android:id="@+id/groceryButton"
        android:layout_width="49dp"
        android:layout_height="45dp"
        android:layout_marginEnd="220dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/food"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/grocery" />

    <ImageView
        android:id="@+id/recipeButton"
        android:layout_width="49dp"
        android:layout_height="45dp"
        android:layout_marginEnd="132dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/recipe"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/chef_hat" />

    <ImageView
        android:id="@+id/cartButton"
        android:layout_width="49dp"
        android:layout_height="45dp"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="5dp"
        android:contentDescription="@string/cart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/shopping_cart" />

    <ImageView
        android:id="@+id/search_image"
        android:layout_width="29dp"
        android:layout_height="25dp"
        android:layout_marginEnd="324dp"
        android:layout_marginBottom="688dp"
        android:contentDescription="@string/searchIcon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/magnifiying_glass" />

    <EditText
        android:id="@+id/search_item"
        android:layout_width="333dp"
        android:layout_height="43dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="680dp"
        android:background="@drawable/rectangle"
        android:ems="10"
        android:hint="@string/search"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:paddingStart="55dp"
        android:paddingEnd="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/meat_button"
        android:layout_width="50dp"
        android:layout_height="47dp"
        android:layout_marginEnd="308dp"
        android:layout_marginBottom="608dp"
        android:contentDescription="@string/meat_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/steak" />

    <ImageView
        android:id="@+id/fish_button"
        android:layout_width="50dp"
        android:layout_height="47dp"
        android:layout_marginEnd="244dp"
        android:layout_marginBottom="608dp"
        android:contentDescription="@string/fish_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/fish" />

    <ImageView
        android:id="@+id/vegetable_button"
        android:layout_width="50dp"
        android:layout_height="47dp"
        android:layout_marginEnd="180dp"
        android:layout_marginBottom="608dp"
        android:contentDescription="@string/vegetable_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/eggplant" />

    <ImageView
        android:id="@+id/fruit_button"
        android:layout_width="50dp"
        android:layout_height="47dp"
        android:layout_marginEnd="116dp"
        android:layout_marginBottom="608dp"
        android:contentDescription="@string/fruit_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/apple" />

    <ImageView
        android:id="@+id/jar_button"
        android:layout_width="50dp"
        android:layout_height="47dp"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="608dp"
        android:contentDescription="@string/jar_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/butter_jar" />

    <ImageView
        android:id="@+id/background_container"
        android:layout_width="144dp"
        android:layout_height="198dp"
        android:layout_marginEnd="224dp"
        android:layout_marginBottom="380dp"
        android:contentDescription="@string/image_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/landingpagebackground" />

    <ImageView
        android:id="@+id/image_of_food"
        android:layout_width="117dp"
        android:layout_height="99dp"
        android:layout_marginEnd="239dp"
        android:layout_marginBottom="460dp"
        android:contentDescription="@string/image_preview"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/image_2" />

    <TextView
        android:id="@+id/item_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="308dp"
        android:layout_marginBottom="432dp"
        android:text="@string/price_item"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/item_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="244dp"
        android:layout_marginBottom="416dp"
        android:gravity="start"
        android:text="@string/item_description"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="280dp"
        android:layout_marginBottom="400dp"
        android:text="@string/item_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>